dataset1235/2025-2/805158916/users/4104794000/executions/71079933_291286518.log
== SUBMISSION (2025-08-13 15:06:41)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input())

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
22
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 14:39:07)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input())

# Impressao do dobro do numero
print(int)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
<class 'int'>
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
<class 'int'>
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
<class 'int'>
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
<class 'int'>
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
<class 'int'>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 14:45:14)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input()*)

# Impressao do dobro do numero
print(num)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 4
    num = int(input()*)
                      ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 4
    num = int(input()*)
                      ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 4
    num = int(input()*)
                      ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 4
    num = int(input()*)
                      ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 4
    num = int(input()*)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 14:40:10)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(11))

# Impressao do dobro do numero
print(num)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
11256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
111234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
115678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
11444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
1111
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 14:39:31)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(11))

# Impressao do dobro do numero
print(num)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
11256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
111234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
115678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
11444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
1111
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 14:39:14)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(11))

# Impressao do dobro do numero
print(int)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
11<class 'int'>
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
11<class 'int'>
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
11<class 'int'>
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
11<class 'int'>
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
11<class 'int'>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 14:42:15)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input())

# Impressao do dobro do numero
print(num)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
1234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
5678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
11
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 14:50:29)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(11))

# Impressao do dobro do numero
print(num(11*2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(num(11*2))
          ^^^^^^^^^
TypeError: 'int' object is not callable
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(num(11*2))
          ^^^^^^^^^
TypeError: 'int' object is not callable
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(num(11*2))
          ^^^^^^^^^
TypeError: 'int' object is not callable
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(num(11*2))
          ^^^^^^^^^
TypeError: 'int' object is not callable
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(num(11*2))
          ^^^^^^^^^
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 14:45:45)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(x*))

# Impressao do dobro do numero
print(num)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 4
    num = int(input(x*))
                      ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 4
    num = int(input(x*))
                      ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 4
    num = int(input(x*))
                      ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 4
    num = int(input(x*))
                      ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 4
    num = int(input(x*))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 14:50:17)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(11))

# Impressao do dobro do numero
print(num(*2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(num(*2))
          ^^^^^^^
TypeError: 256 argument after * must be an iterable, not int
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(num(*2))
          ^^^^^^^
TypeError: 1234 argument after * must be an iterable, not int
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(num(*2))
          ^^^^^^^
TypeError: 5678 argument after * must be an iterable, not int
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(num(*2))
          ^^^^^^^
TypeError: 444 argument after * must be an iterable, not int
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(num(*2))
          ^^^^^^^
TypeError: 11 argument after * must be an iterable, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
